[package]
name = "dns-rs"
version = "0.1.0"
authors = ["Chareice <chareice@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-message-parser = "~0.5"
bytes = "~1.0"
reqwest = { version = "0.11", features = ["blocking"]}