[package]
name = "dns-rs"
version = "0.1.0"
authors = ["Chareice <chareice@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
once_cell= "1.7.2"
lazy_static = "1.4.0"
env_logger = "0.8.3"
serde_json = "1.0"
dotenv = "0.15.0"
dns-message-parser = "~0.5"
bytes = "~1.0"
reqwest = { version = "0.11", features = ["blocking"]}
